bug fix: align items

--- a/css/overide.css
+++ b/css/overide.css
@@ -4,11 +4,17 @@
 
 .btn-primary .icon {
   position: absolute;
-  left: 10px; /* Pas dit aan naar jouw voorkeur */
-  top: 50%;
+  left: 10px;
+  top: 40%;
   transform: translateY(-50%);
 }
 
 .btn-primary .text {
-  margin-left: 30px; /* Pas dit aan om de ruimte tussen het icoon en de tekst te vergroten of te verkleinen */
+  margin-left: 30px;
+}
+
+.slash {
+  margin: 10px;
+  align-self: flex-start;
+  font-size: 25px;
 }
